# cas

./: .gitignore  pyproject.toml
config/: acoustic.yaml  behavior.yaml  config.yaml  dataset.yaml  dyads.csv  epochs.yaml  events.yaml  hazard_behavior.yaml  hazard_fpp_neural_permutation_null.yaml  hazard_fpp_tde_hmm.yaml  hmm.yaml  info_rate_induced_lmeeg.yaml  lmeeeg.yaml  lmeeeg_fpp_spp_cycle_position.yaml  neural_hazard_fpp_spp.yaml  neural_hazard_fpp_spp_renyi_alpha.yaml  paths.yaml  preprocessing.yaml  sampling.yaml  source_dics_fpp_spp_alpha_beta.yaml  trf.yaml  trf_spp_onset_control.yaml  viz.yaml
config/behavior/: hazard.yaml
config/epochs/: erp.yaml
config/induced/: alpha_beta_conf_disc.yaml  (+3 more)
data/: annotation_definition.md
dev/: claire_surprisal.py  claire_surprisal_requirements.txt  convert_tokens.py  debug_tokens.py  diagnostics.py  textgrid_fpp_spp_pairs.py  textgrid_fpp_spp_with_rate.py
docs/: README.md  behavior_final_hazard.md  behaviour_latency_regime_stan.md
tests/: conftest.py  test_acoustic_features.py  test_annotations.py  test_cli_info_rate_induced_lmeeg.py  test_cli_lmeeeg_figures.py  test_events.py  test_glm.py  test_induced_epochs.py  test_info_rate_induced_lmeeg_config.py  test_lmeeeg_io.py  test_lmeeeg_pipeline.py  test_lmeeeg_viz.py  test_lmeeeg_workflow.py  test_neural_lowlevel.py  test_preprocessing_config.py  test_preprocessing_pipeline.py  test_source_dics.py  test_source_dics_plotting.py  test_textgrid_fpp_spp_pairs.py  test_trf_control.py
trf/: __init__.py  nested_cv.py  prepare.py
workflow/: Snakefile  Snakefile.trf
(+309 files in other folders)
