[project]
name = "cas"
version = "0.1.0"
description = "Conversation as Active Sensing"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Hiro" }
]

license = { text = "MIT" }

dependencies = [
    # Core numerical stack
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",

    # EEG / neural analysis
    "mne>=1.6",

    # Machine learning utilities
    "scikit-learn>=1.3",

    # Statistical modelling
    "statsmodels>=0.14",
    "lmeeeg==0.3.4",

    # Survival / hazard models
    "lifelines>=0.28",

    # GLHMM (exploratory latent state model)
    "glhmm",

    # Config + validation
    "pyyaml>=6.0",
    "jsonschema>=4.0",

    # IO
    "pyarrow>=14.0",

    # Utility
    "tqdm"
]
